The Samba-Bugzilla – Bug 13462
metadata.tdb does not honour LDB_FLG_NOSYNC
Last modified: 2018-06-03 10:44:42 UTC
Home
|
New
|
Browse
|
Search
|
[?]
|
Reports
|
Requests
|
Help
|
New Account
|
Log In
[x]
|
Forgot Password
Login:
[x]
Bug 13462
-
metadata.tdb does not honour LDB_FLG_NOSYNC
Summary:
metadata.tdb does not honour LDB_FLG_NOSYNC
Status
:
NEW
Alias:
None
Product:
Samba 4.1 and newer
Classification:
Unclassified
Component:
AD: LDB/DSDB/SAMDB (
show other bugs
)
Version:
4.8.2
Hardware:
All All
I
mportance
:
P5 normal
(
vote
)
Target Milestone:
---
Assignee:
Andrew Bartlett
QA Contact:
Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
Reported:
2018-06-03 10:44 UTC by
Andrew Bartlett
Modified:
2018-06-03 10:44 UTC (
History
)
CC List:
0 users
See Also:
Attachments
Add an attachment
(proposed patch, testcase, etc.)
Note
You need to
log in
before you can comment on or make changes to this bug.
Description
Andrew Bartlett
2018-06-03 10:44:42 UTC
The open of metadata.tdb should translate the LDB_FLG_NOSYNC into TDB_NOSYNC.
Format For Printing
-
XML
-
Clone This Bug
-
Top of page